JEKT-136 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_hmd     - Dataset        - MD_SLS_ORDR_LINE

--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -3292,6 +3292,62 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: REQ_SGMNT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LOC_PHY_HANDOVR_GOODS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HANDOVR_LOC_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EQUIP_RSDL_VAL
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: US_FED_GOVT_FLD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHAR_VAL_1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHAR_VAL_2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CHAR_VAL_3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: DAI_ETL_ID
     type: integer
     nullable: false
