--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -1682,6 +1682,69 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: RTN_RSN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTRN_RFND_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: APPR_BLK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NUM_COND_REC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RISK_RLVNT_SLS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TAX_CD_AUTMT_DTRMN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MAN_TAX_CD_RSN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TAX_INCT_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TAX_SUBJ_SUBST_TRIB
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: RTG_NUM_OPS_ORDR_AUFPL_OLC
     type: string
     nullable: true
@@ -1691,6 +1754,62 @@ schema:
       tags: []
   - name: INTRNL_CNTR_APLZL_OLC
     type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COST_CTR_SOPROMET_KOSTL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RESV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FL_NO_SHIPPING
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: POS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MYMEDISET_FL_LN_FEE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TRAY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MONIT_REC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EQMNT_RSDL_VAL
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -1752,6 +1871,41 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: STD_WBS_ELMNT_PROJ_INCPT_VIA_SD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WRK_PER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TRAD_PTNR_BUSN_AREA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RTG_NUM_OPS_ORDR_AUFPL_OAA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INTRNL_CNTR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PRC_AND_EXCH_RT_DTTM
     type: timestamp
     nullable: true
@@ -1759,8 +1913,36 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
+  - name: REQ_SGMNT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LOC_PHY_HANDOVR_GOODS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HANDOVR_LOC_DTTM
     type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_NUM_USED_BY_VEND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EQUIP_RSDL_VAL
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -1768,6 +1950,13 @@ schema:
       tags: []
   - name: MATL_GRP_4_DESC
     type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l0_upt_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
