JEKT-136 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_MBP     - Dataset        - MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1489,7 +1489,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-13 11:41:32'
-    modifiedAt: '2023-04-13 15:16:35'
+    modifiedAt: '2023-04-18 19:08:42'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1505,6 +1505,7 @@ pipelines:
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBKD
       - datasets/DS_SAP_MBP_VBAP
+      - datasets/DS_SAP_TVM4T
       outputs:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
@@ -2273,7 +2274,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-18 18:52:20'
+    modifiedAt: '2023-04-18 19:08:42'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
