JEKT-136 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_P01     - Dataset        - MD_SLS_ORDR_LINE        - DS_SAP_P01_VBAP

--- a/src/datasets/DS_SAP_P01_VBAP/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_P01_VBAP/pbt_aspects.yml
@@ -1472,56 +1472,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: STOCKLOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SLOCTYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSR_RET_REASON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSR_REFUND_CODE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSR_APPROV_BLOCK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _BEV1_SRFUND
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AUFPL_OLC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: APLZL_OLC
     type: string
     nullable: true
     metadata:
@@ -1570,7 +1521,742 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BUDGET_PD
+  - name: ZZMNRFC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZMODELN_1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZMODELN_2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRC_PRG_ID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZNAME_CODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZAUGRU
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZSLSFLG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCOMMCD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCONTR_NO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCONTR_PRD_NO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCONTR_TIER_NO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZFRGHTCD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZHNDCD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZDMGTYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZRSTRFEE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZFEE_OVR_APR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPPRRCV_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCUSTSIG_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZAPPREQ_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCRDAPP_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZDRCODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRC_GROUP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCONTRACT_GRP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCNTR_GRP_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRC_LIST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRC_LIST_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCTBEG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCTEDT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCOUPON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZREL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZUOM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZVEND_NAME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZHND_CHARGE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZGCONTR_NO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZLDEATH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZRANK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZRES_NO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZKVGR1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZORDER_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZORDER_REASON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZEXCL_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZREM_CODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZINV_NO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZINV_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZSHIP_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZORDER_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCVIND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZGTPFG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZGPO_NAME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_U_RET_RSN_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCONTR_NAME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZTERRID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZRET_DATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZALAH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZMLAH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBCKO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCP_PRCNG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBCKO_ONCE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBCK1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBCK1_ONCE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBLOCK_Z3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZLEGAL_LN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZINS_REQ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_PO_ST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_PO_END
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_BIOMED
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRC_OVER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRICE_BOOK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRICGP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBRAN2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPROD_PRC_GRP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZMAT_DRP_SHP_I
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCUST_DRP_SHP_I
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZYB00
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZYB00_KWERT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZNEW
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZNEW_KWERT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZPRC_KWERT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZADJ
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZADJ_KWERT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZYCON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZYCON_KWERT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZBRAN3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZSETNETWR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STOCKLOC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SLOCTYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSR_RET_REASON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSR_REFUND_CODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSR_APPROV_BLOCK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NRAB_KNUMH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TRMRISK_RELEVANT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SGT_RCAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HANDOVERLOC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HANDOVERDATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: HANDOVERTIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TC_AUT_DET
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MANUAL_TC_REASON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FISCAL_INCENTIVE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TAX_SUBJECT_ST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FISCAL_INCENTIVE_ID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPCSTO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REVACC_REFID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REVACC_REFTYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AUFPL_OLC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: APLZL_OLC
     type: string
     nullable: true
     metadata:
@@ -1584,13 +2270,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MILL_SE_GPOSN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: PRS_OBJNR
     type: string
     nullable: true
@@ -1598,147 +2277,154 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ARSNUM
+  - name: PRS_SD_SPSNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ARSPOS
+  - name: PRS_WORK_PERIOD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: WTYSC_CLMITEM
+  - name: PARGB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_SHIP_FROM
+  - name: AUFPL_OAA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_SHIP_TO
+  - name: APLZL_OAA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_CONTRACT_NUM
+  - name: ZZBUNIT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_CONT_PRICE
+  - name: ZZFAMILY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_CONT_PRC_ELE
+  - name: ZZSUBFAMILY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_SHIP_COT
+  - name: _SOPROMET_KOSTL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_ORIGIN_COT
+  - name: _SOPROMET_LRESN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_CUSTOMER
+  - name: _SOPROMET_NOSHP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_ORDER_REASON
+  - name: _SOPROMET_POSNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_MATERIAL_LOT
+  - name: _SOPROMET_KZLGB
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_HIERARCHY
+  - name: _BITMYM_TRAY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_AI_CODE
+  - name: _BITMYM_MONINR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_AI_QTY
+  - name: ZSD_MYM_HARD_ALLOC_X
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_AI_STATUS
+  - name: _BITMYM_SVALUE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_RET_QTY
+  - name: _BITMYM_AVALUE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_AF_MATNR
+  - name: _BITMYM_IDNLF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_AF_CHARG
+  - name: ZZREPL_ORD_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_AF_MENGE
+  - name: ZZFE_NUMBER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZCOMP_PARENT
     type: string
     nullable: true
     metadata:
