--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -1710,6 +1710,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: RISK_RLVNT_SLS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: TAX_CD_AUTMT_DTRMN
     type: string
     nullable: true
@@ -1746,6 +1753,41 @@ schema:
       mappings: []
       tags: []
   - name: INTRNL_CNTR_APLZL_OLC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COST_CTR_SOPROMET_KOSTL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RESV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FL_NO_SHIPPING
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: POS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MYMEDISET_FL_LN_FEE
     type: string
     nullable: true
     metadata:
@@ -1850,15 +1892,15 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_GRP_4_DESC
-    type: string
+  - name: _l0_upt_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
-    type: timestamp
+  - name: MATL_GRP_4_DESC
+    type: string
     nullable: true
     metadata:
       description: ''
