JEKT-296 🔁 Modified     - Pipeline        - SAP_MD_PO_HIST     - Dataset        - MD_PO_HIST

--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -480,7 +480,7 @@ schema:
       tags: []
   - name: ORIG_OF_AN_INVC_ITM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
