--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5651,7 +5651,32 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-04-03 13:50:02'
-    modifiedAt: '2023-04-03 13:59:04'
+    modifiedAt: '2023-04-19 05:05:56'
+    author: jcacere7@its.jnj.com
+  jobs/JOB_MD_PO_HIST:
+    name: JOB_MD_PO_HIST
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-19 05:06:58'
+    modifiedAt: '2023-04-19 05:13:29'
     author: jcacere7@its.jnj.com
 functions:
   author: null
